Fixed extra width created from full-start & full-end sections of container grid. Just added an overflow-x: hidden to fix it.

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,10 @@ body {
 	}
 }
 
+main {
+	overflow-x: hidden;
+}
+
 html {
 	font-size: 62.5%;
 	font-family: "Roboto", sans-serif;
